<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>es.ull.simulation</groupId>
  <artifactId>utils</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>utils</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.organization>jades</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <dependencies>

    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.22.1</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>5.2.3</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.zenuevo.simkit/simkit -->
    <dependency>
      <groupId>com.zenuevo.simkit</groupId>
      <artifactId>simkit</artifactId>
      <version>1.4.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/junit/junit -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
    <dependency>
      <groupId>org.jacoco</groupId>
      <artifactId>jacoco-maven-plugin</artifactId>
      <version>0.8.11</version>
    </dependency>

  </dependencies>

  <profiles>
    <profile>
      <id>coverage</id>
      <reports>
        <reporting>
          <builds>
            <id>coverage</id>
            <build>
              <plugins>
                <plugin>
                  <groupId>org.jacoco</groupId>
                  <artifactId>jacoco-maven-plugin</artifactId>
                  <version>0.8.7</version>
                  <executions>
                    <execution>
                      <id>jacoco-initialize</id>
                      <goals>
                        <goal>prepare-agent</goal>
                      </goals>
                      <configuration>
                        <destFile>${basedir}/doc/jacoco.exec</destFile>
                      </configuration>
                    </execution>
                    <execution>
                      <id>jacoco-report</id>
                      <phase>test</phase>
                      <goals>
                        <goal>report</goal>
                      </goals>
                      <configuration>
                        <dataFile>${basedir}/doc/jacoco.exec</dataFile>
                        <outputDirectory>${basedir}/doc/jacoco</outputDirectory>
                      </configuration>
                    </execution>
                  </executions>
                </plugin>
              </plugins>
            </build>
          </builds>
        </reporting>
      </reports>
    </profile>
  </profiles>
</project>
